# Plex-scripts

./: .env.template  .gitignore  .stignore  Makefile  addCustomScripts.py  pyproject.toml
media_management/: remove_bad_songs.py
playlist_collection/: create_mix_playlists.py  m3u_to_playlist__with_search.py  mix_playlists.py
